[0.0.8]
- Added an option to the settings dialog to change the keyboard layout
- Added a heightmap loader to the terrain component widget in the inspector
- Implemented a Blender-like rotation tool
- Toast messages at top right corner of the screen
- Huge internal refactoring
- Ctrl+S shortcut for saving the project
- Fixed crash on MacOS

[0.0.7] ~ 28/02/2016
- Implemented a undo/redo system for most operations
- Implemented a shortcut system
- The 3D viewport is now a UI widget and scales correctly with the window size
- The inspector now spans the whole right side as sidebar
- New lighting system for the terrain & entity shader
- Child objects of a selected parent object will be highlighted now as well
- Changed internal save file format to allow a better precision for game object transformation
- Improved the translate tool
- Implemented game object rotation & scaling
- Implemented a highly accurate game object picking system (see: http://www.opengl-tutorial.org/miscellaneous/clicking-on-objects/picking-with-an-opengl-hack/)
- Drag'n Drop for game objects in the outline
- In the inspector, all transformations are now displayed as relative transformations with the parent object as origin
- Improved game object parenting
- Updated VisUI to version 1.0.1

[0.0.6] ~ 07/02/2016
- Updated libGDX to 1.9.2
- Implemented texture splatting for terrain textures
- Implemented terrain painting with up to 5 textures per terrain
- Moved SelectionTool & TranslateTool to the toolbar
- Moved the terrain tools to the component widget in the inspector
- Removed the tools tab in the left sidebar
- Changed input handling for terrain brushes: the mouse has to be moved constantly in order to draw
- Added camera speed control buttons to the status bar
- Added a terrain component widget for the inspector
- Arbitrary images can now internally be used as terrain brushes (like Gimp & Blender do). The r channel determines the strength of the brush.