@@ -11,7 +11,6 @@ allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
 
-
     ext {
         appName = "Mundus"
         gdxVersion = '1.9.3'
